--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   analytics.load("PqJeAXCkPbZHhXA6lyjtKzRr3SgEECjd");
   analytics.page();
   }}();
-</script>-Placeholder for Segment Snippet --> 
+    </script>
 
 </head> 
 <body> 
